# armforge-ci

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: benchmark.yml  tests.yml
benchmarks/: latest.json  latest.md
docs/: architecture.md  methodology.md
site/: app.js  benchmark.json  index.html  styles.css
src/armforge/: __init__.py  cli.py  metrics.py  model.py  pipeline.py  report.py  worker.py
tests/: test_metrics.py  test_report.py
