[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "armforge-ci"
version = "0.1.0"
description = "Reproducible ONNX quantization and native Arm64 inference benchmarks in CI"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "FreakyAI-star" }]
dependencies = [
  "numpy>=1.26,<3",
  "onnx>=1.16,<2",
  "onnxruntime>=1.20,<2",
  "psutil>=5.9,<8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.9,<1",
]

[project.scripts]
armforge = "armforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/armforge"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

